# wikiSearch

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: app.py
src/app/data/: sample-copy.xml
src/app/static/css/: styles.css
src/app/templates/: base.html  search.html
src/search/: engine.py  engine_utils.py  load.py  run.py  timing.py
tests/: test_engine.py
