[project]
name = "wikisearch"
version = "0.1.0"
description = "basic search engine to search over wiki documents"
authors = [
    {name = "Himanshu Barak"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.110.0",
    "redis>=5.0.1",
    "lxml>=5.1.0",
    "aiohttp>=3.9.3",
    "Jinja2>=3.1.3",
    "uvicorn>=0.27.1",
    "gunicorn>=21.2.0",
]


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
